--- a/TEST.html
+++ b/TEST.html
@@ -299,7 +299,7 @@ Dernière question sur le thème Sexualité avant qu&#39;en entame le dernier su
 
 Question Vrai ou Faux : 
 
-TOP : Vrai ou faux ? La PrEP, si elle est bien prisen permet de protéger contre toutes les IST
+TOP : Vrai ou faux ? La PrEP, si elle est bien prise permet de protéger contre toutes les IST
 
 [[Faux -&gt;Vrai_4]]
 [[Vrai -&gt;Faux_4]]
@@ -318,7 +318,7 @@ Première question : une question vrai ou faux
 
 TOP : Vrai ou faux ? Les professionnels de santé doivent pousser les patient.es à décrire le plus possible les événements traumatiques qu’ils ont pu vivre afin de personnaliser au mieux la prise en charge
 
-.[[Faux -&gt;Vrai_5]]
+[[Faux -&gt;Vrai_5]]
 [[Vrai -&gt;Faux_5]]
 
 &lt;/div&gt;
