--- a/Projet E-learning.html
+++ b/Projet E-learning.html
@@ -185,8 +185,7 @@ body{
 
 /*a.link_internal {
   	text-decoration:none;
-}*/
-}</style><script role="script" id="twine-user-script" type="text/twine-javascript">window.urlScared = "https://i.imgur.com/piFurag.png";
+}*/</style><script role="script" id="twine-user-script" type="text/twine-javascript">window.urlScared = "https://i.imgur.com/piFurag.png";
 window.urlGrin = "https://i.imgur.com/dg0VzPZ.png";
 window.urlSmile = "https://i.imgur.com/4X0EkHO.png";
 window.urlLaugh = "https://i.imgur.com/8EeZbB0.png";
