Display score everywhere

--- a/La v_rit_ sous la couette.html
+++ b/La v_rit_ sous la couette.html
@@ -147,6 +147,7 @@ html {
 
 body{
   background-color:#00000000;
+  overflow-x: hidden;
 }
 
 #passages{
@@ -465,33 +466,33 @@ $(document).on(&#39;:passagedisplay&#39;, function() {
 $(document).on(&#39;:passagedisplay&#39;, function() {
      changePresImage(urlSerious);
 });
-&lt;/script&gt;</tw-passagedata><tw-passagedata pid="36" name="Q12" tags="Question-vrai-ou-faux" position="2100,350" size="100,100">&lt;&lt;audio &quot;r1&quot; stop&gt;&gt;&lt;&lt;audio &quot;expl-son&quot; stop&gt;&gt;&lt;&lt;audio &quot;quest-son&quot; volume 0.28 play loop&gt;&gt;&lt;&lt;timed 1.5s&gt;&gt;&lt;&lt;audio &quot;q9&quot; play&gt;&gt;&lt;&lt;/timed&gt;&gt;&lt;div class=&quot;question&quot;&gt;Vrai ou faux ? Comme toutes les relations sont différentes, il n’existe pas de cycle de violence conjugale qui pourrait être comparable d’une relation à une autre. &lt;/div&gt; &lt;div class=&quot;rep&quot;&gt;[[Vrai|Q12Vrai]]&lt;/div&gt; &lt;div class=&quot;rep&quot;&gt;[[Faux|Q12Faux]]&lt;/div&gt;&lt;div class=&quot;pres&quot;&gt;&lt;/div&gt;
+&lt;/script&gt;</tw-passagedata><tw-passagedata pid="36" name="Q12" tags="Question-vrai-ou-faux" position="2100,350" size="100,100">&lt;&lt;audio &quot;r1&quot; stop&gt;&gt;&lt;&lt;audio &quot;expl-son&quot; stop&gt;&gt;&lt;&lt;audio &quot;quest-son&quot; volume 0.28 play loop&gt;&gt;&lt;&lt;timed 1.5s&gt;&gt;&lt;&lt;audio &quot;q9&quot; play&gt;&gt;&lt;&lt;/timed&gt;&gt;&lt;div class=&quot;question&quot;&gt;Vrai ou faux ? Comme toutes les relations sont différentes, il n’existe pas de cycle de violence conjugale qui pourrait être comparable d’une relation à une autre. &lt;/div&gt; &lt;div class=&quot;rep&quot;&gt;[[Vrai|Q12Vrai]]&lt;/div&gt; &lt;div class=&quot;rep&quot;&gt;[[Faux|Q12Faux]]&lt;/div&gt;&lt;div class=&quot;score&quot;&gt;Score : $score&lt;/div&gt;&lt;div class=&quot;pres&quot;&gt;&lt;/div&gt;
 &lt;script&gt;
 $(document).on(&#39;:passagedisplay&#39;, function() {
      changePresImage(urlSmile);
 });
 &lt;/script&gt;</tw-passagedata><tw-passagedata pid="37" name="Q12Vrai" tags="Explication" position="2250,450" size="100,100">&lt;&lt;audio &quot;quest-son&quot; stop&gt;&gt;&lt;&lt;audio &quot;q9&quot; stop&gt;&gt;&lt;&lt;audio &quot;mr-son&quot; play volume 0.28&gt;&gt;&lt;&lt;timed 1.5s&gt;&gt;&lt;&lt;audio &quot;expl-son&quot; volume 0.5 play loop&gt;&gt; &lt;&lt;audio &quot;r1&quot; play&gt;&gt; &lt;&lt;/timed&gt;&gt;&lt;div class=&quot;exp&quot;&gt;Mauvaise réponse...
 En effet, dans une relation conjugale marquée par la violence, le cycle se répète plus ou moins régulièrement et s’accélère avec le temps.&lt;img class=&quot;imgq12exp&quot;  src=&quot;https://i.imgur.com/4YkBPin.png&quot;/&gt;
-[[Suivant|Q12exp]]&lt;/div&gt; &lt;div class=&quot;pres&quot;/&gt;
+[[Suivant|Q12exp]]&lt;/div&gt;&lt;div class=&quot;score&quot;&gt;Score : $score&lt;/div&gt;&lt;div class=&quot;pres&quot;/&gt;
 &lt;script&gt;
 $(document).on(&#39;:passagedisplay&#39;, function() {
      changePresImage(urlScared);
 });
 &lt;/script&gt;</tw-passagedata><tw-passagedata pid="38" name="Q12Faux" tags="Explication" position="2250,250" size="100,100">&lt;&lt;audio &quot;quest-son&quot; stop&gt;&gt;&lt;&lt;audio &quot;q9&quot; stop&gt;&gt;&lt;&lt;audio &quot;br-son&quot; play volume 0.5&gt;&gt;&lt;&lt;timed 1.5s&gt;&gt;&lt;&lt;audio &quot;expl-son&quot; volume 0.28 play loop&gt;&gt;&lt;&lt;audio &quot;r1&quot; play&gt;&gt;&lt;&lt;/timed&gt;&gt;&lt;&lt;set $score+=1&gt;&gt;&lt;div class=&quot;exp&quot;&gt;Bonne réponse!
 En effet, dans une relation conjugale marquée par la violence, le cycle se répète plus ou moins régulièrement et s’accélère avec le temps.&lt;img class=&quot;imgq12exp&quot;  src=&quot;https://i.imgur.com/4YkBPin.png&quot;/&gt;
-[[Suivant|Q12exp]]&lt;/div&gt; &lt;div class=&quot;pres&quot;/&gt;
+[[Suivant|Q12exp]]&lt;/div&gt;&lt;div class=&quot;score&quot;&gt;Score : $score&lt;/div&gt;&lt;div class=&quot;pres&quot;/&gt;
 &lt;script&gt;
 $(document).on(&#39;:passagedisplay&#39;, function() {
      changePresImage(urlGrin);
 });
 &lt;/script&gt;</tw-passagedata><tw-passagedata pid="39" name="Q12exp" tags="Explication" position="2375,375" size="100,100">&lt;&lt;audio &quot;r1&quot; stop&gt;&gt;&lt;&lt;timed 1s&gt;&gt;&lt;&lt;audio &quot;r1&quot; play&gt;&gt;&lt;&lt;/timed&gt;&gt;&lt;div class=&quot;exp&quot;&gt;Dans ces cas là il est important de s&#39;adresser aux personnes compétantes :
 &lt;table&gt;&lt;tbody&gt;&lt;tr&gt;&lt;td&gt;Les intervenants locaux :&lt;/td&gt;&lt;td&gt;Les numéros nationaux:&lt;/td&gt;&lt;/tr&gt;&lt;tr&gt;&lt;td&gt;- Médecins (Généralistes, Spécialistes, Pédiatres)&lt;/td&gt;&lt;td&gt;- 15 : Samu&lt;/td&gt;&lt;/tr&gt;&lt;tr&gt;&lt;td&gt;- Professionnels de la santé mentale (Psychologues, Psychiatres)&lt;/td&gt;&lt;td&gt;- 17 : Police&lt;/td&gt;&lt;/tr&gt;&lt;tr&gt;&lt;td&gt;- Juristes&lt;/td&gt;&lt;td&gt;- 114 : Urgences sourds et malentendants&lt;/td&gt;&lt;/tr&gt;&lt;tr&gt;&lt;td&gt;- UMJ (Urgences Médico-Judiciares)&lt;/td&gt;&lt;td&gt;- 115 : Hébergement d&#39;urgence&lt;/td&gt;&lt;/tr&gt;&lt;tr&gt;&lt;td&gt;&lt;/td&gt;&lt;td&gt;- 3919 : Violence femme info&lt;/td&gt;&lt;/tr&gt;&lt;tr&gt;&lt;td&gt;&lt;/td&gt;&lt;td&gt;- 116006 : Numéro européen dédié aux victimes d&#39;infractions pénales&lt;/td&gt;&lt;/tr&gt;&lt;/tbody&gt;&lt;/table&gt;
-[[Question suivante|Q13]]&lt;/div&gt; &lt;div class=&quot;pres&quot;/&gt;
+[[Question suivante|Q13]]&lt;/div&gt;&lt;div class=&quot;score&quot;&gt;Score : $score&lt;/div&gt;&lt;div class=&quot;pres&quot;/&gt;
 &lt;script&gt;
 $(document).on(&#39;:passagedisplay&#39;, function() {
      changePresImage(urlSerious);
 });
-&lt;/script&gt;</tw-passagedata><tw-passagedata pid="40" name="Q13" tags="Question-liste" position="2525,375" size="100,100">&lt;&lt;audio &quot;r1&quot; stop&gt;&gt;&lt;&lt;audio &quot;expl-son&quot; stop&gt;&gt;&lt;&lt;audio &quot;quest-son&quot; volume 0.28 play loop&gt;&gt;&lt;&lt;timed 1.5s&gt;&gt;&lt;&lt;audio &quot;q9&quot; play&gt;&gt;&lt;&lt;/timed&gt;&gt;&lt;div class=&quot;question&quot;&gt;Les personnes ayant vécu une violence conjugale dans leur vie ont un risque de faire une tentative de suicide :&lt;/div&gt;&lt;table&gt;&lt;tbody&gt;&lt;tr&gt;&lt;td&gt;&lt;div class=&quot;rep&quot;&gt;[[Identique à la population générale |Q13rnok]]&lt;/div&gt;&lt;/td&gt;&lt;td&gt; &lt;div class=&quot;rep&quot;&gt;[[Multiplié par quasiment 3 |Q13rok]]&lt;/div&gt;&lt;/td&gt;&lt;/tr&gt;&lt;tr&gt;&lt;td&gt;&lt;div class=&quot;rep&quot;&gt;[[Multiplié par quasiment 6 |Q13rnok]]&lt;/div&gt;&lt;/td&gt;&lt;td&gt;&lt;div class=&quot;rep&quot;&gt;[[Multiplié par quasiment 10 |Q13rnok]]&lt;/div&gt;&lt;/td&gt;&lt;/tr&gt;&lt;/tbody&gt;&lt;/table&gt;&lt;div class=&quot;pres&quot;&gt;&lt;/div&gt;
+&lt;/script&gt;</tw-passagedata><tw-passagedata pid="40" name="Q13" tags="Question-liste" position="2525,375" size="100,100">&lt;&lt;audio &quot;r1&quot; stop&gt;&gt;&lt;&lt;audio &quot;expl-son&quot; stop&gt;&gt;&lt;&lt;audio &quot;quest-son&quot; volume 0.28 play loop&gt;&gt;&lt;&lt;timed 1.5s&gt;&gt;&lt;&lt;audio &quot;q9&quot; play&gt;&gt;&lt;&lt;/timed&gt;&gt;&lt;div class=&quot;question&quot;&gt;Les personnes ayant vécu une violence conjugale dans leur vie ont un risque de faire une tentative de suicide :&lt;/div&gt;&lt;table&gt;&lt;tbody&gt;&lt;tr&gt;&lt;td&gt;&lt;div class=&quot;rep&quot;&gt;[[Identique à la population générale |Q13rnok]]&lt;/div&gt;&lt;/td&gt;&lt;td&gt; &lt;div class=&quot;rep&quot;&gt;[[Multiplié par quasiment 3 |Q13rok]]&lt;/div&gt;&lt;/td&gt;&lt;/tr&gt;&lt;tr&gt;&lt;td&gt;&lt;div class=&quot;rep&quot;&gt;[[Multiplié par quasiment 6 |Q13rnok]]&lt;/div&gt;&lt;/td&gt;&lt;td&gt;&lt;div class=&quot;rep&quot;&gt;[[Multiplié par quasiment 10 |Q13rnok]]&lt;/div&gt;&lt;/td&gt;&lt;/tr&gt;&lt;/tbody&gt;&lt;/table&gt;&lt;div class=&quot;score&quot;&gt;Score : $score&lt;/div&gt;&lt;div class=&quot;pres&quot;&gt;&lt;/div&gt;
 &lt;script&gt;
 $(document).on(&#39;:passagedisplay&#39;, function() {
      changePresImage(urlSmile);
@@ -499,7 +500,7 @@ $(document).on(&#39;:passagedisplay&#39;, function() {
 &lt;/script&gt;</tw-passagedata><tw-passagedata pid="41" name="Q13rnok" tags="Explication" position="2650,475" size="100,100">&lt;&lt;audio &quot;quest-son&quot; stop&gt;&gt;&lt;&lt;audio &quot;q9&quot; stop&gt;&gt;&lt;&lt;audio &quot;mr-son&quot; play volume 0.28&gt;&gt;&lt;&lt;timed 1.5s&gt;&gt;&lt;&lt;audio &quot;expl-son&quot; volume 0.5 play loop&gt;&gt; &lt;&lt;audio &quot;r1&quot; play&gt;&gt; &lt;&lt;/timed&gt;&gt;&lt;div class=&quot;exp&quot;&gt;Mauvaise réponse...
 Selon un article publié en 2022 dans The Lancet Psychiatry, le risque de faire une tentative de suicide chez les personnes ayant vécu une violence conjugale dans leur vie est multiplié par 2,82. Celui d’avoir des idées suicidaires par 1,85, et celui d’avoir des comportements automutilatoires par 2,20.
 D’après le même article, s’il y a eu une violence conjugale dans l’année le risque de tentative de suicide est multiplié par 3,79, celui d’avoir des idées suicidaires par 3,05 et celui d’avoir des comportements automutilatoires par 3,04. 
-[[Voir les résultats|Interpretation]]&lt;/div&gt; &lt;div class=&quot;pres&quot;/&gt;
+[[Voir les résultats|Interpretation]]&lt;/div&gt;&lt;div class=&quot;score&quot;&gt;Score : $score&lt;/div&gt;&lt;div class=&quot;pres&quot;/&gt;
 &lt;script&gt;
 $(document).on(&#39;:passagedisplay&#39;, function() {
      changePresImage(urlSad);
@@ -507,7 +508,7 @@ $(document).on(&#39;:passagedisplay&#39;, function() {
 &lt;/script&gt;</tw-passagedata><tw-passagedata pid="42" name="Q13rok" tags="Explication" position="2650,250" size="100,100">&lt;&lt;audio &quot;quest-son&quot; stop&gt;&gt;&lt;&lt;audio &quot;q9&quot; stop&gt;&gt;&lt;&lt;audio &quot;br-son&quot; play volume 0.5&gt;&gt;&lt;&lt;timed 1.5s&gt;&gt;&lt;&lt;audio &quot;expl-son&quot; volume 0.28 play loop&gt;&gt;&lt;&lt;audio &quot;r1&quot; play&gt;&gt;&lt;&lt;/timed&gt;&gt;&lt;&lt;set $score+=1&gt;&gt;&lt;div class=&quot;exp&quot;&gt;Bonne réponse!
 Selon un article publié en 2022 dans The Lancet Psychiatry, le risque de faire une tentative de suicide chez les personnes ayant vécu une violence conjugale dans leur vie est multiplié par 2,82. Celui d’avoir des idées suicidaires par 1,85, et celui d’avoir des comportements automutilatoires par 2,20.
 D’après le même article, s’il y a eu une violence conjugale dans l’année le risque de tentative de suicide est multiplié par 3,79, celui d’avoir des idées suicidaires par 3,05 et celui d’avoir des comportements automutilatoires par 3,04. 
-[[Voir les résultats|Interpretation]]&lt;/div&gt; &lt;div class=&quot;pres&quot;/&gt;
+[[Voir les résultats|Interpretation]]&lt;/div&gt;&lt;div class=&quot;score&quot;&gt;Score : $score&lt;/div&gt;&lt;div class=&quot;pres&quot;/&gt;
 &lt;script&gt;
 $(document).on(&#39;:passagedisplay&#39;, function() {
      changePresImage(urlGrin);
